name:             redis2json
version:          0.1.0
synopsis:         Dumps Redis values by pattern to JSON
homepage:         http://github.com/mvoidex/redis2json
author:           Alexandr `voidex` Ruchkin
license:          BSD3
cabal-version:    >= 1.10
build-type:       Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base                        >= 4 && < 5,
        aeson                       >= 0.6 && < 0.7,
        aeson-pretty                >= 0.6 && < 0.7,
        bytestring                  >= 0.9 && < 0.10,
        hedis                       >= 0.5 && < 0.6,
        text                        >= 0.11 && < 0.12,
        unordered-containers        >= 0.2 && < 0.3
    exposed-modules:
        Database.Redis.Dump.JSON
    other-modules:
        Test

executable redis2json
    hs-source-dirs: src
    default-language: Haskell2010
    main-is: redis2json.hs
    build-depends:
        base                        >= 4 && < 5,
        aeson                       >= 0.6 && < 0.7,
        aeson-pretty                >= 0.6 && < 0.7,
        bytestring                  >= 0.9 && < 0.10,
        hedis                       >= 0.5 && < 0.6,
        text                        >= 0.11 && < 0.12,
        unordered-containers        >= 0.2 && < 0.3
